@@ -8,6 +8,7 @@ _________________
 
 v1.59 TODO
 
+    - Added optional POD coverage testing.
     - Added optional Perl::Critic testing.
     - Made code Perl::Critic clean.
     - Simplified and corrected Makefile.PL requirements.
